- Stop suggested videos for campaign (playlists) - Home page maison section - to be editable - Blog posts - not showing images in edit - Show direct transfer bank account details - Change currency to euro

--- a/wp-content/themes/maison/style.css
+++ b/wp-content/themes/maison/style.css
@@ -1015,10 +1015,6 @@ img.responsive, video.responsive {
     margin-left: -9px;
 }
 
-.background--timeless-chic {
-    background-image: url('assets/images/timeless-chic.jpg')
-}
-
 /* START ARTICLES */
 
 .article {
